--- a/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
+++ b/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
@@ -1,34 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
-    <PackageId>Telegram.Bot.Framework</PackageId>
-    <PackageVersion>2.0.0-alpha4</PackageVersion>
+    <PackageId>TelegramBot.Framework</PackageId>
+    <PackageVersion>3.0.0</PackageVersion>
+    <TargetFramework>netstandard2.1</TargetFramework>
 
     <LangVersion>latest</LangVersion>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 
-    <Title>Telegram Bot Framework</Title>
+    <Title>Extended Telegram Bot Framework</Title>
     <Description>Simple framework for building powerful Telegram bots 🤖</Description>
-    <Authors>Poulad,TelegramBots</Authors>
+    <Authors>Sukhrob Ilyosbekov</Authors>
     <PackageTags>telegram;bot;chatbot;chat-framework;framework;netcore</PackageTags>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/TelegramBots/Telegram.Bot.Framework</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</RepositoryUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/docs/icon.png</PackageIconUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/suxrobGM/Telegram.Bot.Framework</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/suxrobGM/Telegram.Bot.Framework.git</RepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Telegram.Bot" Version="14.10.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3'">
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Telegram.Bot" Version="16.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
