redesigned IUpdateHandler, CommandBase, removed UseWhen MapWhen middlewares, updated quickstart project

--- a/sample/Quickstart.AspNetCore/appsettings.json
+++ b/sample/Quickstart.AspNetCore/appsettings.json
@@ -1,8 +1,6 @@
 ﻿{
   "EchoBot": {
-    "Username": "quickstart_tgbot",
-    "ApiToken": "1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy",
-    "WebhookDomain": "https://quickstart-tgbot.herokuapp.com",
-    "WebhookPath": "/api/bots/1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy/webhook"
+    "Username": "quickstart_testbot",
+    "ApiToken": "1991651950:AAFAa9aFVFJPckc7bOfUrGCTqW8wOsd2Sns",
   }
 }
