changed nuget package details

--- a/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
+++ b/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
@@ -18,10 +18,9 @@
     <PackageProjectUrl>https://github.com/suxrobGM/Telegram.Bot.Framework</PackageProjectUrl>
     <RepositoryUrl>https://github.com/suxrobGM/Telegram.Bot.Framework.git</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <NoWarn>1701;1702;1591</NoWarn>
+	<Copyright>Sukhrob Ilyosbekov</Copyright>
+	<PackageLicenseFile>C:\Users\suxrobgm\source\repos\Telegram.Bot.Framework\LICENSE</PackageLicenseFile>
+	<NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
