--- a/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
+++ b/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
@@ -2,9 +2,7 @@
 
   <PropertyGroup>
     <PackageId>Telegram.Bot.MagicFramework</PackageId>
-    <PackageVersion>3.0.1</PackageVersion>
     <TargetFramework>netstandard2.1</TargetFramework>
-
     <LangVersion>latest</LangVersion>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -12,6 +10,7 @@
     <Title>Telegram Bot Framework</Title>
     <Description>Extended verison of telegram bot framework for building powerful Telegram bots 🤖</Description>
     <Authors>Sukhrob Ilyosbekov, Poulad, TelegramBots</Authors>
+	<Version>3.0.1</Version>
     <PackageTags>telegram;bot;chatbot;chat-framework;framework;netcore</PackageTags>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
